# src/api/routers/users.go
@@ -1,0 +1,13 @@
+package routers
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/mohammad-ebrahimi-it/car-shoping/api/handlers"
+	"github.com/mohammad-ebrahimi-it/car-shoping/config"
+)
+
+func User(router *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewUsersHandler(cfg)
+
+	router.POST("/send-otp", h.SendOtp)
+}
